1999-02-05  Mark Kettenis  <kettenis@gnu.org>

	* users.c (trivfs_S_file_chmod): Clear S_ISVTX bit instead of
	clearing all other bits.

Sat Jan 30 00:27:14 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* munge.c (create_queue): Make sure that malloc succeeds.
	Reported by OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>.

1998-10-24  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c (open_hook): Assert DTR if NO_CARRIER, even for CLOCAL.
	This is the only thing that tells it to open the device.

Mon Oct 26 16:47:18 1998  Thomas Bushnell, BSG  <tb@mit.edu>

	* devio.c (char_size_mask_xxx): New variable.
	(devio_set_bits): Don't munge c_cflag here.  Instead,
	set char_size_mask_xxx.
	(device_read_reply_inband): Mask off high bits from the input to
	simulate less than 8-bit channels.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* devio.c: Add #undef's for B19200, B38400, B57600, B115200, in case
	they are defined in <device/tty_status.h> too.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c: Include <hurd/fshelp.h> for fshelp_isowner decl.

	* term.h (clear_queue): Change return type to void.

Wed Aug 20 14:07:35 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (main): New args for
	ports_manage_port_operations_multithread.

Mon Jun  9 12:19:51 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_chmod): Fix typo.

Tue May 27 12:04:00 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_chmod): Turn off S_ISPARE too.

Fri Feb 21 13:17:48 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (open_hook): Add OPEN_COUNT hack to try and detect lossage.

Thu Feb 20 02:25:29 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Initialize TTY_CLASS & PTY_CLASS too instead of
	doing TTY_CNTL_CLASS & PTY_CNTL_CLASS twice.

Wed Feb 19 13:10:47 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (trivfs_protid_portclasses, trivfs_protid_nportclasses,