@@ -1,3 +1,7 @@
+Tue Feb 16 06:10:08 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* users.c (trivfs_S_io_revoke): New function.
+
 1999-02-05  Mark Kettenis  <kettenis@gnu.org>
 
 	* users.c (trivfs_S_file_chmod): Clear S_ISVTX bit instead of
